--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <button onclick="alert('Button clicked!')">Click Me test NOW</button>
+    <button onclick="alert('Button clicked!')">Click Me test</button>
 </body>
 </html>
 
