--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <script type="module" async>
       import * as niivue from "https://cdn.jsdelivr.net/npm/@niivue/niivue@0.46.0/dist/index.js";
       async function addVolumeFromFiles(f) {
-          console.log('attempting to open ', f[0].name)
+          console.log('Attempting to open ', f[0].name)
           console.log('details', f[0])
           nv1.loadFromFile(f[0])
       }
