--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <div class="dropdown">
         <button class="dropbtn">Dropdown</button>
         <div class="dropdown-content">
-            <button id="openBtnT1">Choose a T1 image or mesh with a dialog</button>
-            <button id="openBtnPET">Choose a PET image or mesh with a dialog</button>
-            <button id="openBtnSPECT">Choose a SPECT image or mesh with a dialog</button>
+            <button id="openBtnT1">Choose a T1 image</button>
+            <button id="openBtnPET">Choose a PET image</button>
+            <button id="openBtnSPECT">Choose a SPECT image</button>
         </div>
       </div>
     </header>
