--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-      <canvas id="gl1"></canvas>
+      <canvas id="gl1" width="600" height="600"></canvas>
     </main>
 
     <script type="module">
