changed to sliders

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
             <button id="openBtnSPECT">Choose a SPECT image</button>
         </div>
       </div>
+      <div class="dropdown">
+        <button class="dropdown-btn">Visualisation options</button>
+        <div class="dropdown-content">
+            <label>
+                <input type="checkbox" id="checkBox"> Enable Option
+            </label>
+            <label>Slider 1: <span id="slider1Value">50</span></label>
+            <input type="range" id="slider1" min="0" max="1" value="0.50">
+            <label>Slider 2: <span id="slider2Value">30</span></label>
+            <input type="range" id="slider2" min="0" max="1" value="0.30">
+        </div>
+    </div>
     </header>
 
     <main>
