--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <noscript>niivue requires JavaScript.</noscript>
     <header>
       <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
+        <button class="dropbtn">Input files</button>
         <div class="dropdown-content">
             <button id="openBtnT1">Choose a T1 image</button>
             <button id="openBtnPET">Choose a PET image</button>
