--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <noscript>niivue requires JavaScript.</noscript>
     <header>
-	<h3>Investigate impact of the regularisation parameter lambda on different inverse solutions</h3>
+	<h3>Addition of multiple MRI Files on top of eachother</h3>
 	<div class="row">
 		<div class="dropdown">
 			<button class="dropbtn" data-toggle="dropdown">
