got rid of selected dropdown file input

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             </button>
             <div class="dropdown-content">
               <!-- MRI-T1 file input -->
-		<a class="viewBtn dropdown-item-checked" id="+MRI-T1">MRI-T1</a>
-      		<a class="viewBtn dropdown-item-checked" id="+MRI-T2">MRI-T2</a>
-		<a class="viewBtn dropdown-item-checked" id="+PET">PET</a>
-		<a class="viewBtn dropdown-item-checked" id="+SPECT">SPECT</a>
+		<a class="viewBtn dropdown" id="+MRI-T1">MRI-T1</a>
+      	<a class="viewBtn dropdown" id="+MRI-T2">MRI-T2</a>
+		<a class="viewBtn dropdown" id="+PET">PET</a>
+		<a class="viewBtn dropdown" id="+SPECT">SPECT</a>
             </div>
           </div>
 		<div class="dropdown">
