--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
             </button>
             <div class="dropdown-content">
               <!-- MRI-T1 file input -->
-		<a class="viewBtn dropdown" id="+MRI-T1">MRI-T1</a>
-      	<a class="viewBtn dropdown" id="+MRI-T2">MRI-T2</a>
-		<a class="viewBtn dropdown" id="+PET">PET</a>
-		<a class="viewBtn dropdown" id="+SPECT">SPECT</a>
+        <button id="openBtn">Open MRI-T1</button>
+        <button id="openBtn">Open MRI-T2</button>
+
             </div>
           </div>
 		<div class="dropdown">
