--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         		input.type = 'file'
         		document.body.appendChild(input);
         		input.onchange = function (event) {
-					nv1.volumes[0] = addVolumeFromFiles(event.target.files)
+				 addVolumeFromFiles(event.target.files)
         			}
         		input.click()
         
@@ -385,7 +385,7 @@
         		input.type = 'file'
         		document.body.appendChild(input);
         		input.onchange = function (event) {
-					nv1.volumes[1] (event.target.files)
+				 addVolumeFromFiles(event.target.files)
         			}
         		input.click()
             }
@@ -395,7 +395,7 @@
         		input.type = 'file'
         		document.body.appendChild(input);
         		input.onchange = function (event) {
-					nv1.volumes[3] = addVolumeFromFiles(event.target.files)
+					addVolumeFromFiles(event.target.files)
         			}
         		input.click()
             }
@@ -405,7 +405,7 @@
         		input.type = 'file'
         		document.body.appendChild(input);
         		input.onchange = function (event) {
-					nv1.volumes[4] = addVolumeFromFiles(event.target.files)
+					addVolumeFromFiles(event.target.files)
         			}
         		input.click()
             }
