--- a/index.html
+++ b/index.html
@@ -145,6 +145,15 @@
 				id="lmbdSlider"
 			/>
 			<label id="lmbdString" style="padding-right: 10px;">0</label>
+			<label style="border-left: 2px solid grey; padding-left: 2px">
+				<input type="checkbox"  id="MRI T1" />
+				<label for="MRIT1check"> MRI T1</label>
+				<input type="checkbox"  id="MRI T2" />
+				<label for="MRIT2check"> MRI T2 </label>
+				<input type="checkbox"  id="PET" />
+				<label for="PETcheck">PET</label>
+				<input type="checkbox"  id="SPECT" />
+				<label for="SPECTcheck">SPECT</label>
 		</div>
 	</div>
   </header>
