--- a/index.html
+++ b/index.html
@@ -208,22 +208,22 @@
     var spectBuffer = null;
     
 
-	var volumeList1 = [
-	{
-		url: "https://roehrin.github.io/webapps_for_EEG_courses/src/sub-16_ses-preop_desc-brain_T1w.nii.gz",
-		colormap: "gray",
-		opacity: 1
-	},
-	{
-		url: "https://roehrin.github.io/webapps_for_EEG_courses/IED_source/sub-16_meth-" + currMethod.toLowerCase() + ".nii",
-		colormap: "hot",
-		opacity: .6,
-		visible: true,
-		frame4D: 0,
-		cal_min: 0,
-		cal_max: 1000,
-	},
-	]
+	//var volumeList1 = [
+	//{
+	//	url: "https://roehrin.github.io/webapps_for_EEG_courses/src/sub-16_ses-preop_desc-brain_T1w.nii.gz",
+	//	colormap: "gray",
+	//	opacity: 1
+	//},
+	//{
+	//	url: "https://roehrin.github.io/webapps_for_EEG_courses/IED_source/sub-16_meth-" + currMethod.toLowerCase() + ".nii",
+	//	colormap: "hot",
+	//	opacity: .6,
+	//	visible: true,
+	//	frame4D: 0,
+	//	cal_min: 0,
+	//	cal_max: 1000,
+	//},
+	//]
 	perc20Btn.onclick = function (){
 		currentPerc = Math.round(0.20*volSize);
 		applyPercThreshold();
@@ -526,7 +526,7 @@
 	}
 	var nv1 = new niivue.Niivue(opts)
 	nv1.attachTo("gl1")
-	await nv1.loadVolumes(volumeList1)
+	//await nv1.loadVolumes(volumeList1)
 	nv1.volumes[0].colorbarVisible = false;
 	// preload the dipoles of the dipole fit
 	const R = 15;
