--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 	var nv1 = new niivue.Niivue(opts)
 	nv1.attachTo("gl1")
 	//await nv1.loadVolumes(volumeList1)
-	nv1.volumes[0].colorbarVisible = false;
+	//nv1.volumes[0].colorbarVisible = false;
 	// preload the dipoles of the dipole fit
 	const R = 15;
 	let response = await fetch("https://roehrin.github.io/webapps_for_EEG_courses/IED_source/sub-16_meth-dipole_fit.json", {});
